--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -8,11 +8,11 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
+                <th>Reference</th>
                 <th>Name</th>
                 <th>Price</th>
                 <th>Description</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -23,8 +23,8 @@
                 <td>{{ product.price }}</td>
                 <td>{{ product.description }}</td>
                 <td>
-                    <a href="{{ path('app_product_show', {'id': product.id}) }}">show</a>
-                    <a href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
+                    <a class="btn btn-light" href="{{ path('app_product_show', {'id': product.id}) }}">show</a>
+                    <a class="btn btn-warning" href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_product_new') }}">Create new</a>
+    <a class="btn btn-info" href="{{ path('app_product_new') }}">Create new</a>
 {% endblock %}
