--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -1,44 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ product.name | lower}}{% endblock %}
+{% block title %}Product{% endblock %}
 
 {% block body %}
-    <h1 class="text-center mb-3">{{ product.name | upper}}</h1>
-    <section class="row">
-        <div class="col-8 px-3">
-            <table class="table table-light">
-                <tbody>
-                    <tr>
-                        <th>Reference</th>
-                        <td>{{ product.id }}</td>
-                    </tr>
-                    <tr>
-                        <th>Name</th>
-                        <td>{{ product.name }}</td>
-                    </tr>
-                    <tr>
-                        <th>Price</th>
-                        <td>{{ product.price }}</td>
-                    </tr>
-                    <tr>
-                        <th>Description</th>
-                        <td>{{ product.description }}</td>
-                    </tr>
-                </tbody>
-            </table>
-            <a class="btn btn-light" href="{{ path('app_product_index') }}">back to list</a>
+    <h1>Product</h1>
 
-            <a class="btn btn-warning" href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
+    <table class="table">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>{{ product.id }}</td>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <td>{{ product.name }}</td>
+            </tr>
+            <tr>
+                <th>Price</th>
+                <td>{{ product.price }}</td>
+            </tr>
+            <tr>
+                <th>Description</th>
+                <td>{{ product.description }}</td>
+            </tr>
+            <tr>
+                <th>ImageName</th>
+                <td>{{ product.imageName }}</td>
+            </tr>
+            <tr>
+                <th>ImageSize</th>
+                <td>{{ product.imageSize }}</td>
+            </tr>
+            <tr>
+                <th>UpdatedAt</th>
+                <td>{{ product.updatedAt ? product.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+            </tr>
+        </tbody>
+    </table>
 
-            {{ include('product/_delete_form.html.twig') }}
-        </div>
-        <div class="col-4 px-3">
-            {% if product.image is defined %}
-                <img src="{{ product.image }}">
-            {% else %}
-                <img class="rounded-3" src="../images/Placeholder.svg" alt="placeholder">
-            {% endif %}
-        </div>
-    </section>
-    
+    <a href="{{ path('app_product_index') }}">back to list</a>
+
+    <a href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
+
+    {{ include('product/_delete_form.html.twig') }}
 {% endblock %}
