--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,45 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product index{% endblock %}
+{% block title %}Product index
+{% endblock %}
 
 {% block body %}
-    <h1>Product index</h1>
+	<h1>Product index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Reference</th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Description</th>
-                <th>ImageName</th>
-                <th>ImageSize</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for product in products %}
-            <tr>
-                <td>{{ product.id }}</td>
-                <td>{{ product.name }}</td>
-                <td>{{ product.price }}</td>
-                <td>{{ product.description }}</td>
-                <td>{{ product.imageName }}</td>
-                <td>{{ product.imageSize }}</td>
-                <td>{{ product.updatedAt ? product.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a class="btn btn-light" href="{{ path('app_product_show', {'id': product.id}) }}">show</a>
-                    <a class="btn btn-warning" href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>Reference</th>
+				<th>Name</th>
+				<th>Price</th>
+				<th>Description</th>
+				<th>ImageName</th>
+				<th>ImageSize</th>
+				<th>actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for product in products %}
+				<tr>
+					<td>{{ product.id }}</td>
+					<td>{{ product.name }}</td>
+					<td>{{ product.price }}</td>
+					<td>{{ product.description }}</td>
+					<td>{{ product.imageName }}</td>
+					<td>{{ product.imageSize }}</td>
+					<td>
+						<a class="btn btn-light" href="{{ path('app_product_show', {'id': product.id}) }}">show</a>
+						<a class="btn btn-warning" href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
+					</td>
+				</tr>
+			{% else %}
+				<tr>
+					<td colspan="8">no records found</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 
-    <a class="btn btn-info" href="{{ path('app_product_new') }}">Create new</a>
+	<a class="btn btn-info" href="{{ path('app_product_new') }}">Create new</a>
 {% endblock %}
