--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -1,46 +1,48 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product{% endblock %}
+{% block title %}
+	{{ product.name | lower}}
+{% endblock %}
 
 {% block body %}
-    <h1>Product</h1>
+	<h1 class="text-center mb-3">{{ product.name | upper}}</h1>
+	<section class="row">
+		<div class="col-8 px-3">
+			<table class="table table-light">
+				<tbody>
+					<tr>
+						<th>Reference</th>
+						<td>{{ product.id }}</td>
+					</tr>
+					<tr>
+						<th>Name</th>
+						<td>{{ product.name }}</td>
+					</tr>
+					<tr>
+						<th>Price</th>
+						<td>{{ product.price }}
+							€</td>
+					</tr>
+					<tr>
+						<th>Description</th>
+						<td>{{ product.description }}</td>
+					</tr>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ product.name }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ product.price }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ product.description }}</td>
-            </tr>
-            <tr>
-                <th>ImageName</th>
-                <td>{{ product.imageName }}</td>
-            </tr>
-            <tr>
-                <th>ImageSize</th>
-                <td>{{ product.imageSize }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ product.updatedAt ? product.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+				</tbody>
+			</table>
 
-    <a href="{{ path('app_product_index') }}">back to list</a>
+			<a class="btn btn-info" href="{{ path('app_product_index') }}">retour à la liste</a>
 
-    <a href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
+			<a class="btn btn-warning" href="{{ path('app_product_edit', {'id': product.id}) }}">editer</a>
 
-    {{ include('product/_delete_form.html.twig') }}
+			{{ include('product/_delete_form.html.twig') }}
+		</div>
+		<div class="col-4 px-3">
+			{% if product.imageName is defined %}
+				<img class="w-100 rounded-circle" src="../images/products/{{ product.imageName }}">
+			{% else %}
+				<img class="rounded-3" src="../images/Placeholder.svg" alt="placeholder">
+			{% endif %}
+		</div>
+	</section>
 {% endblock %}
