--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap" ;
 
+:root {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 body {
     background-color: lightgray;
 }
